# flux-desktop

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md
.claude/agents/: code-reviewer.md  launch-advisor.md  open-source-gatekeeper.md  project-kickoff.md  release-checklist.md
.github/: FUNDING.yml
app/runtime/: widget-api.js
app/src-tauri/: tauri.conf.json
app/src-tauri/src/: claude_usage.rs  lib.rs
bridges-ghostty-theme/: README.md  bridges-ds
docs/: DESIGN_SYSTEM.md  authoring-guide.md  death stranding theme logic.md  kofi-page-brief.md  obsidian-sync.md
docs/superpowers/handoff/: 2026-04-02-phase5b-complete.md
docs/superpowers/plans/: 2026-03-24-flux-crossplatform-foundation.md  2026-03-26-phase0-foundation.md  2026-03-27-phase2-wizard-archive-settings.md  2026-03-27-phase4a-widget-editor.md  2026-04-01-phase4d-a-custom-data-sources.md  2026-04-01-phase4d-b-asset-manager.md  2026-04-02-obsidian-vault-integration.md  2026-04-02-phase5a-hidpi-multimonitor.md  2026-04-02-phase5b-performance.md  2026-04-09-koji-pro-module-redesign.md  2026-04-11-sys-stats-btop-layout.md  (+2 more)
flux/: .gitignore  platform-notes.md
flux/app/: index.html  package-lock.json
flux/app/src-tauri/: Cargo.toml  tauri.conf.json
flux/app/src-tauri/capabilities/: default.json
flux/app/src-tauri/src/: alerts.rs  archive.rs  assets.rs  autostart.rs  broadcaster.rs  config.rs  custom_data.rs  desktop_layer.rs  lib.rs  metrics.rs  module_settings.rs  monitors.rs  paths.rs
flux/docs/: DESIGN_SYSTEM.md  authoring-guide.md  kickoff-flux.md
flux/website/: index.html
(+85 files in other folders)
